# direktiv-apps

./: .gitignore  LICENSE  Makefile  build-local.sh  docker-pushrm_linux_amd64  getversion.sh  pushall.sh  readme.md
.direktiv/: amazon-sns.json  aws-ec2-create.json  aws-ec2-delete.json  aws-ec2-start.json  aws-ec2-stop.json  awsgo.json  awslog.json  azgo.json  azinvoke.json  azlog.json  azure-servicebus.json  debug.json  discordmsg.json  gcloud-instance-create.json  gcloud-instance-delete.json  gcloud-instance-start.json  gcloud-instance-stop.json  gcloud.json  gcplog.json  greeting.json  lambda.json  request.json  simplepostgresclient.json  slackmsg.json  smtp.json  solve.json  tweet.json  twilio.json
amazon-sns/: Dockerfile  README.md  go.mod  go.sum  main.go
amazon-terraform/: README.md  go.mod  main.go
amazon-upload/: Dockerfile  README.md  go.mod  go.sum  main.go
ansible/: Dockerfile  README.md  VERSION  go.mod  go.sum  main.go
aws-ec2-create/: Dockerfile  README.md  go.mod  go.sum  main.go
aws-ec2-delete/: Dockerfile  README.md  go.mod  go.sum  main.go
aws-ec2-run/: Dockerfile  README.md  go.mod  main.go
aws-ec2-start/: Dockerfile  README.md  go.mod  go.sum  main.go
aws-ec2-stop/: Dockerfile  README.md  go.mod  go.sum  main.go
awscli/: Dockerfile  README.md  main.go
awsgo/: Dockerfile  README.md  go.mod  main.go
awslog/: Dockerfile  README.md  go.mod  go.sum  main.go
azcli/: Dockerfile  README.md  main.go
azgo/: Dockerfile  README.md  go.mod  main.go
examples/rust/: Cargo.toml  Dockerfile  README.md
examples/rust/src/: main.rs
(+521 files in other folders)
